<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Giraff</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="Change_sett">Change Settings</string>
    <string name="Log_out">Log Out</string>
    <string name="title_section_user">user card</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="facebook_app_id">1596426743920733</string>
    <string name="title_activity_dev">DevActivity</string>
    <string name="title_activity_launcher">LauncherActivity</string>
    <string name="upgrade_msg">You have reached the allowed  </string>
    <string name="upgrade_msg2">limit of gis faved</string>
    <string name="upgrade_msg3">Enjoy FUN permanently </string>
    <string name="upgrade_msg4">Without limits :</string>
    <string name="upgrade_btn_text">UPGRADE FOR ONLY .99$</string>
    <string name="title_activity_upgrade">UpgradeActivity</string>
    <string name="start_gif_msg">START GIFFING !</string>
    <string name="title_activity_upgrade_success">UpgradeSuccessActivity</string>
    <string name="title_activity_user_faved_gifs">UserFavedGifsActivity</string>
    <string name="title_user_faved_gifs">Faved Gifs</string>

</resources>
